infra/k8s/expiration-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration 
  template:
    metadata:
      labels:
        app: expiration 
    spec:
      containers:
        - name: expiration 
          image: 190097/expiration
          resources:
            requests:
              cpu: "50m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
