infra/k8s/auth-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth 
  template:
    metadata:
      labels:
        app: auth 
    spec:
      containers:
        - name: auth 
          image: 190097/auth
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "200m"
              memory: "1024Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: ClusterIP
  selector:
    app: auth 
  ports:
    - name: auth 
      protocol: TCP
      port: 3000
      targetPort: 3000
