infra/k8s/nats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats 
  template:
    metadata:
      labels:
        app: nats 
    spec:
      containers:
        - name: nats 
          image: nats-streaming:0.17.0
          args: [
            '-p', '4222',
            '-m', '8222',
            '-hbi', '5s',
            '-hbt', '5s',
            '-hbf', '2',
            '-SD',
            '-cid', 'ecommerce'
          ]
          resources:
            requests:
              cpu: "50m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
---
apiVersion: v1 
kind: Service
metadata:
  name: nats-service
spec:
  type: ClusterIP
  selector:
    app: nats 
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP 
      port: 8222
      targetPort: 8222
