infra/k8s/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders 
  template:
    metadata:
      labels:
        app: orders 
    spec:
      containers:
        - name: orders 
          image: 190097/orders
          resources:
            requests:
              cpu: "50m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  type: ClusterIP
  selector:
    app: orders 
  ports:
    - name: orders 
      protocol: TCP
      port: 3000
      targetPort: 3000
