infra/k8s/payments-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-mongo
  template:
    metadata:
      labels:
        app: payments-mongo 
    spec:
      containers:
        - name: payments-mongo
          image: mongo 
          resources:
            requests:
              cpu: "50m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
---
apiVersion: v1 
kind: Service
metadata:
  name: payments-mongo-service
spec:
  selector:
    app: payments-mongo 
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
