infra/k8s/products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products 
  template:
    metadata:
      labels:
        app: products 
    spec:
      containers:
        - name: products 
          image: 190097/products
          resources:
            requests:
              cpu: "50m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: products-service
spec:
  type: ClusterIP
  selector:
    app: products 
  ports:
    - name: products 
      protocol: TCP
      port: 3000
      targetPort: 3000
